# vscode-broken-ssh-cpptools

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  myproject.code-workspace  prepare.sh
.devcontainer/: Dockerfile  devcontainer.json
include/myproject/: header.h
src/myproject/: header.cpp  main.cpp
